# What-s-to-play

./: README.md  pyproject.toml  run_backend.py  run_frontend.py
backend/: __init__.py
backend/db/: __init__.py
backend/db/models/: user.py
backend/routes/: __init__.py  games.py
